--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=1;Server=localhost;Port=5432;Database=Materials"
+    "DefaultConnection": "Server=localhost;Database=Materials;User Id=sa;Password=Gospodin53!;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;"
   },
   "Logging": {
     "LogLevel": {
