--- a/Materials.csproj
+++ b/Materials.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
@@ -20,7 +21,24 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.3" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.3" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Materials.Tests\bin\Debug\net8.0\appsettings.Development.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\bin\Debug\net8.0\appsettings.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\bin\Debug\net8.0\Materials.deps.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\bin\Debug\net8.0\Materials.runtimeconfig.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\bin\Debug\net8.0\Materials.staticwebassets.runtime.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\bin\Debug\net8.0\Materials.Tests.deps.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\bin\Debug\net8.0\Materials.Tests.runtimeconfig.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\bin\Debug\net8.0\Materials.Tests\obj\Materials.Tests.csproj.nuget.dgspec.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\bin\Debug\net8.0\Materials.Tests\obj\project.assets.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\obj\Debug\net8.0\Materials.Tests.sourcelink.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\obj\Materials.Tests.csproj.nuget.dgspec.json" />
+    <_ContentIncludedByDefault Remove="Materials.Tests\obj\project.assets.json" />
   </ItemGroup>
 
 </Project>
